feat(npm): require npm 7 to install

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Richard Harrah",
   "license": "MIT",
   "engines": {
-    "node": ">=14"
+    "node": ">=14",
+    "npm": "^7"
   },
   "main": "dist/index.js",
   "module": "dist/mrm.esm.js",
