--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           node-version: 14.x
 
+      - name: Install npm@7
+        run: npm i -g npm
+
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
 
@@ -53,6 +56,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 14.x
+
+      - name: Install npm@7
+        run: npm i -g npm
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
